Examples/test-suite/errors/cpp_invalid_exponents2.i
%module xxx

void bad(double nn = 6.6e);

