Examples/test-suite/errors/cpp_invalid_exponents2.stderr
cpp_invalid_exponents2.i:3: Error: Exponent does not have any digits
cpp_invalid_exponents2.i:3: Error: Syntax error in input(1).
